[gd_scene load_steps=31 format=2]

[ext_resource path="res://Image/body_ichuen.png" type="Texture" id=1]
[ext_resource path="res://Image/Head_mno.png" type="Texture" id=2]
[ext_resource path="res://Scene/Drag/DragMix.gd" type="Script" id=3]
[ext_resource path="res://Image/home.png" type="Texture" id=4]
[ext_resource path="res://Image/bg1080x1920.jpg" type="Texture" id=5]
[ext_resource path="res://Image/Head_olayzzz.png" type="Texture" id=6]
[ext_resource path="res://Image/Head_Ichuen.png" type="Texture" id=7]
[ext_resource path="res://Image/Head_Speng.png" type="Texture" id=8]
[ext_resource path="res://Font/SanamDeklen_chaya.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Image/body_olay.png" type="Texture" id=10]
[ext_resource path="res://Image/body_speng.png" type="Texture" id=11]
[ext_resource path="res://Image/body_mno.png" type="Texture" id=12]
[ext_resource path="res://Image/fullz-ichuen.png" type="Texture" id=13]
[ext_resource path="res://Image/fullz-olay.png" type="Texture" id=14]
[ext_resource path="res://Image/fullz-speng.png" type="Texture" id=15]
[ext_resource path="res://Image/fullz-mno.png" type="Texture" id=16]

[sub_resource type="CircleShape2D" id=1]
radius = 25.5708

[sub_resource type="CapsuleShape2D" id=5]
radius = 29.0598
height = 134.654

[sub_resource type="CapsuleShape2D" id=10]
radius = 40.0
height = 140.0

[sub_resource type="CapsuleShape2D" id=13]
radius = 52.0
height = 102.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 43.0
height = 112.0

[sub_resource type="DynamicFont" id=6]
size = 55
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 55
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=8]
size = 55
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
size = 55
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=14]
size = 55
font_data = ExtResource( 9 )

[sub_resource type="CapsuleShape2D" id=15]
radius = 112.0
height = 372.0

[sub_resource type="CapsuleShape2D" id=16]
radius = 101.0
height = 310.0

[sub_resource type="CapsuleShape2D" id=17]
radius = 86.0
height = 336.0

[sub_resource type="CapsuleShape2D" id=18]
radius = 114.0
height = 320.0

[node name="Drag" type="Node2D"]
script = ExtResource( 3 )

[node name="bg" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="MnoRigidBody2D" type="RigidBody2D" parent="." groups=["Mno"]]
position = Vector2( 369.685, 111 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MnoRigidBody2D"]
shape = SubResource( 1 )

[node name="tekgameHead_mno" type="Sprite" parent="MnoRigidBody2D/CollisionShape2D"]
texture = ExtResource( 2 )

[node name="OlayRigidBody2D" type="RigidBody2D" parent="." groups=["Olay"]]
position = Vector2( 154, 111 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OlayRigidBody2D"]
shape = SubResource( 1 )

[node name="OlayHead" type="Sprite" parent="OlayRigidBody2D/CollisionShape2D"]
texture = ExtResource( 6 )

[node name="SpengRigidBody2D" type="RigidBody2D" parent="." groups=["Speng"]]
position = Vector2( 610, 111 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpengRigidBody2D"]
shape = SubResource( 1 )

[node name="Pic" type="Sprite" parent="SpengRigidBody2D/CollisionShape2D"]
texture = ExtResource( 8 )

[node name="IchuenRigidBody2D" type="RigidBody2D" parent="." groups=["Ichuen"]]
position = Vector2( 870, 111 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="IchuenRigidBody2D"]
shape = SubResource( 1 )

[node name="Pic" type="Sprite" parent="IchuenRigidBody2D"]
texture = ExtResource( 7 )

[node name="IchuenBodyArea2D" type="Area2D" parent="."]
position = Vector2( 55, 1800 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="IchuenBodyArea2D"]
shape = SubResource( 5 )

[node name="body" type="Sprite" parent="IchuenBodyArea2D"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="IchuenBodyArea2D"]

[node name="OlayBodyArea2D" type="Area2D" parent="."]
position = Vector2( 200, 1800 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OlayBodyArea2D"]
shape = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="OlayBodyArea2D"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Tween" type="Tween" parent="OlayBodyArea2D"]

[node name="MnoBodyArea2D" type="Area2D" parent="."]
position = Vector2( 355, 1800 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MnoBodyArea2D"]
shape = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="MnoBodyArea2D"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="Tween" type="Tween" parent="MnoBodyArea2D"]

[node name="SpengBodyArea2D" type="Area2D" parent="."]
position = Vector2( 555, 1810 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpengBodyArea2D"]
shape = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="SpengBodyArea2D"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Tween" type="Tween" parent="SpengBodyArea2D"]

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_left = 50.0
margin_right = 849.0
margin_bottom = 94.0

[node name="ClickMno" type="Label" parent="VBoxContainer"]
margin_right = 168.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.878431, 0.537255, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Mno : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickOlay" type="Label" parent="VBoxContainer"]
margin_left = 172.0
margin_right = 344.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.419608, 0.498039, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Olay : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickSpeng" type="Label" parent="VBoxContainer"]
margin_left = 348.0
margin_right = 587.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.92549, 0.972549, 0.113725, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Spreng : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickIchuen" type="Label" parent="VBoxContainer"]
margin_left = 591.0
margin_right = 799.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.772549, 0, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Icuen : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBT" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1005.0
margin_top = 1850.0
margin_right = 1145.0
margin_bottom = 1984.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 4 )
flat = true

[node name="TotalScores" type="Label" parent="."]
margin_left = 456.0
margin_top = 907.0
margin_right = 646.0
margin_bottom = 1001.0
custom_colors/font_color = Color( 0.921875, 0.129639, 0.129639, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Total : 0"
align = 1
valign = 1

[node name="FullMnoArea2D" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.196078 )
position = Vector2( 1000, 800 )
scale = Vector2( 0.5, 0.5 )

[node name="FullMno" type="Sprite" parent="FullMnoArea2D"]
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullMnoArea2D"]
position = Vector2( -20, 0 )
shape = SubResource( 15 )

[node name="FullSpengArea2D2" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.215686 )
position = Vector2( 100, 800 )
scale = Vector2( 0.5, 0.5 )

[node name="FullSpeng" type="Sprite" parent="FullSpengArea2D2"]
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullSpengArea2D2"]
position = Vector2( -30, 0 )
shape = SubResource( 16 )

[node name="FullIchuenArea2D" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.215686 )
position = Vector2( 100, 1100 )
scale = Vector2( 0.5, 0.5 )

[node name="FullIchuen" type="Sprite" parent="FullIchuenArea2D"]
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullIchuenArea2D"]
position = Vector2( -20, 50 )
shape = SubResource( 17 )

[node name="FullOlayArea2D" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.215686 )
position = Vector2( 1000, 1100 )
scale = Vector2( 0.5, 0.5 )

[node name="FullOlay" type="Sprite" parent="FullOlayArea2D"]
texture = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullOlayArea2D"]
position = Vector2( -20, 20 )
shape = SubResource( 18 )

[connection signal="body_entered" from="IchuenBodyArea2D" to="." method="_on_IchuenArea2D_body_entered"]
[connection signal="input_event" from="IchuenBodyArea2D" to="." method="_on_Area2D_input_event"]
[connection signal="tween_completed" from="IchuenBodyArea2D/Tween" to="." method="_on_Tween_ichuen_tween_completed"]
[connection signal="body_entered" from="OlayBodyArea2D" to="." method="_on_OlayBodyArea2D_body_entered"]
[connection signal="input_event" from="OlayBodyArea2D" to="." method="_on_OlayBodyArea2D_input_event"]
[connection signal="tween_completed" from="OlayBodyArea2D/Tween" to="." method="_on_Tween_olay_tween_completed"]
[connection signal="body_entered" from="MnoBodyArea2D" to="." method="_on_MnoBodyArea2D_body_entered"]
[connection signal="input_event" from="MnoBodyArea2D" to="." method="_on_MnoBodyArea2D_input_event"]
[connection signal="tween_completed" from="MnoBodyArea2D/Tween" to="." method="_on_Tween_mno_tween_completed"]
[connection signal="body_entered" from="SpengBodyArea2D" to="." method="_on_SpengBodyArea2D_body_entered"]
[connection signal="input_event" from="SpengBodyArea2D" to="." method="_on_SpengBodyArea2D_input_event"]
[connection signal="tween_completed" from="SpengBodyArea2D/Tween" to="." method="_on_Tween_speng_tween_completed"]
[connection signal="pressed" from="BackBT" to="." method="_on_BackBT_pressed"]
[connection signal="input_event" from="FullMnoArea2D" to="." method="_on_FullMnoArea2D_input_event"]
[connection signal="input_event" from="FullSpengArea2D2" to="." method="_on_FullSpengArea2D2_input_event"]
[connection signal="input_event" from="FullIchuenArea2D" to="." method="_on_FullIchuenArea2D_input_event"]
[connection signal="input_event" from="FullOlayArea2D" to="." method="_on_FullOlayArea2D_input_event"]
